[package]
name = "cex-streamer"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros", "sync", "time", "signal"] }
anyhow = "1.0.100"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
futures-util = "0.3.31"
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
tungstenite = "0.28.0"
url = "2.5.7"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter", "ansi"] }
tracing-appender = "0.2.3"
chrono = "0.4.42"
once_cell = "1.21.3"
clap = { version = "4.5.48", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["display"] }
async-trait = "0.1.89"
futures = "0.3.31"
dotenv = "0.15.0"
tokio-util = "0.7.16"
redis = { version = "0.32.6", features = ["aio", "tokio-comp", "connection-manager" ] }
